--- a/app-config.json
+++ b/app-config.json
@@ -1,5 +1,5 @@
 {
-	"version":	1,
+	"version": "0.1",
 	"hid":	{
 		"script_selected_path":	"",
 		"script_list_path":	"/home/zerovolts/git/zerovolts-ui/",
